# Fallout-4-VR-DLSS-4-10-Kasim-Edition

./: .gitignore  CMakeLists.txt  F4SEVR_DLSS.ini  F4SEVR_DLSS.vcxproj  IMPLEMENTATION_SUMMARY.md  NGX_SDK.props  README.md  build_log.txt  build_vs2022.bat  compile_all.bat  dlss_config.cpp  dlss_config.h  dlss_hooks.cpp  dlss_hooks.h  dlss_manager.cpp  dlss_manager.h  exports.def  old-workingupscaler.md  plan.md  setup_ngx_path.bat  test_build.bat  version.h
.claude/: settings.local.json
DLSS/: meta.ini
DLSS/F4SE/Plugins/: Fallout4Upscaler.ini
cmake/: sourcelist.cmake
docs/: DLSS_Implementation_Patches.md  DLSS_Task_Plan.md  DLSS_VR_RootCause_Analysis.md  Early-DLSS-Integration-Plan.md
include/backends/: IUpscaleBackend.h
include/common/: IDebugLog.h
include/f4se/: PluginAPI.h
include/f4se_common/: f4se_version.h
src/: F4SEVR_Upscaler.cpp  F4SEVR_Upscaler.h  ImGui_Menu.cpp  main.cpp
src/backends/: SLBackend.cpp  SLBackend.h
